--- a/index.html
+++ b/index.html
@@ -20,15 +20,24 @@
   </header>
 
   <section class="hero">
-    <h2>Start Building with Roblox Studio</h2>
-    <p>This guide will walk you through your first steps in creating a game experience using Roblox Studio.</p>
-    <a href="https://create.roblox.com/landing" target="_blank" class="button">Install Roblox Studio</a>
+    <div class="hero-content">
+      <p class="hero-subtitle">Your journey into Roblox starts here</p>
+      <h2>Start Building with Roblox Studio</h2>
+      <p>This guide will walk you through your first steps in creating a game experience using Roblox Studio.</p>
+      <a href="https://create.roblox.com/landing" target="_blank" class="button">
+        Install Roblox Studio
+      </a>
+    </div>
+    <a href="#setup" class="scroll-down" aria-label="Scroll to setup">↓</a>
   </section>
 
   <main>
     <section class="instructions" id="setup">
       <h2>Step 1: Installing Studio</h2>
-      <p>Download Roblox Studio from the official <a href="https://create.roblox.com/landing" target="_blank">Roblox Create portal</a>. After installing, log in with your Roblox account.</p>
+      <p>Download Roblox Studio from the official 
+        <a href="https://create.roblox.com/landing" target="_blank">Roblox Create portal</a>. 
+        After installing, log in with your Roblox account.
+      </p>
       <img src="images/setup.png" alt="Installing Roblox Studio screenshot" class="screenshot" />
     </section>
 
@@ -45,7 +54,9 @@
       <pre><code>print("Hello, Roblox world!")</code></pre>
       <img src="images/script.png" alt="Adding a script screenshot" class="screenshot" />
       <p>This script runs when the game starts and logs text to the output.</p>
-      <a href="https://create.roblox.com/docs/reference/engine/classes/Script" target="_blank">Learn more about Scripts →</a>
+      <a href="https://create.roblox.com/docs/reference/engine/classes/Script" target="_blank">
+        Learn more about Scripts →
+      </a>
     </section>
 
     <section class="instructions" id="publish">
